gl33-master/src/test/deca/context/invalid/other/affectation_boolean_string.deca
// Invalid test
// Affectation d'un boolean à un string

{
   String s;
   boolean b;

   s = b;
   s = true;
   s = false;
}
